--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-yeet
+<!DOCTYPE html>
+<html>
+<body>
+
+<div style="text-align: center; text-justify: newspaper">
+    <h1>Marcus Dunn</h1>
+    <h4><span id="career_path"></span></h4>
+    <p>
+        Hello! I'm Marcus Dunn, currently attending the University of Victoria for Computer Science with an option in
+        Theory. My current largest
+        project is working at <a
+            href="https://leftindust.com/">leftindust</a> where I've created the backend for an Electronic Medical
+        Records System. I have a habit of procrastinating schoolwork by writing code which has lead to <a
+            href="marcusdunn.github.io">this</a>, a <i>useful</i> <a href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
+        and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language"
+                                                                                                       onmouseenter="change_lang()">haskell</span>.
+        My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
+        solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
+        javascript if I'm <i>really</i> forced to).
+    </p>
+
+    <p>
+        <b>I pride myself code that is (in order)</b>
+        <br>
+        readable to someone familiar with the language and problem domain
+        <br>
+        sufficiently statically typed to enforce invariants,
+        <br>
+        well tested enough to avoid breakage,
+        <br>
+        and fast enough so users can't tell if something is straining
+        <br>
+        <br>
+        If that interests you in any way, let me know:
+    </p>
+
+    <div style="display: grid; grid-template-columns: auto auto auto;">
+        <div>
+            <h4>Contact Info</h4>
+            <ul>
+                <li>Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
+                <li>Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<script>
+    let career_paths = [
+        "developer",
+        "software engineer",
+        "nerd",
+        "coder",
+        "hacker",
+        "lost university student",
+        "horrible speller",
+    ]
+    let career_handler = (times) => {
+        let career_path_dom_element = document.getElementById("career_path");
+        if (times < 10) {
+            career_path_dom_element.innerHTML = career_paths[Math.floor(Math.random() * 4)];
+            setTimeout(() => career_handler(times + 1), times * 100)
+        } else {
+            career_path_dom_element.innerHTML = "developer"
+        }
+    };
+    setTimeout(() => career_handler(1), 100)
+
+    let languages = [
+        "coq",
+        "idris",
+        "haskell",
+        "clojure",
+        "idris2",
+        "zig"
+    ]
+
+    let change_lang = () => {
+        let lang_dom_element = document.getElementById("language");
+        lang_dom_element.innerText = languages[Math.floor(Math.random() * languages.length)]
+    }
+
+</script>
+
+</body>
+</html> 
