--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         project is working at <a
             href="https://leftindust.com/">leftindust</a> where I've created the backend for an Electronic Medical
         Records System. I have a habit of procrastinating schoolwork by writing code which has lead to <a
-            href="marcusdunn.github.io">this</a>, a <i>useful</i> <a href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
-        and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language"
-                                                                                                       onmouseenter="change_lang()">haskell</span>.
+            href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
+        and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language" onmouseenter="change_lang()">coq</span>.
         My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
         solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
         javascript if I'm <i>really</i> forced to).
