added projects of note

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         project is working at <a
             href="https://leftindust.com/">leftindust</a> where I've created the backend for an Electronic Medical
         Records System. I have a habit of procrastinating schoolwork by writing code which has lead to <a
-            href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
-        and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language" onmouseenter="change_lang()">coq</span>.
+            href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a
+            href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
+        and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language"
+                                                                                                       onmouseenter="change_lang()">coq</span>.
         My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
         solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
         javascript if I'm <i>really</i> forced to).
@@ -39,6 +41,27 @@
             <ul>
                 <li>Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
                 <li>Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
+            </ul>
+        </div>
+        <div>
+            <h4>Projects of Note</h4>
+            <ul>
+                <li>
+                    An end to end Machine learning pipeline (such that failures in the production train the next
+                    iteration) for segmentation and OCR on water and gas
+                    meters (<a href="https://www.service-link.ca/">ServiceLink</a>)
+                </li>
+                <li>A Secure Federated Graphql API for accessing and updating medical records (<a
+                        href="https://leftindust.com">leftindust</a>)
+                </li>
+                <li>
+                    An Image Labeling application for Yolo/Vott (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
+                    Project</a>)
+                </li>
+                <li>
+                    An Implementation of Dependant Types in Kotlin (<a href="https://github.com/MarcusDunn/order">Personal
+                    Project</a>)
+                </li>
             </ul>
         </div>
     </div>
