--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             <h4>Projects of Note</h4>
             <ul>
                 <li>
-                    An end to end Machine learning pipeline (such that failures in the production train the next
-                    iteration) for segmentation and OCR on water and gas
+                    An end to end Machine learning pipeline for segmentation and OCR
                     meters (<a href="https://www.service-link.ca/">ServiceLink</a>)
                 </li>
                 <li>A Secure Federated Graphql API for accessing and updating medical records (<a
