--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a
             href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
         and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language"
-                                                                                                       onmouseenter="change_lang()">coq</span>.
+                                                                                                       onmouseenter="change_lang()"
+                                                                                                       onmousedown="change_lang()">coq</span>.
         My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
         solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
         javascript if I'm <i>really</i> forced to).
@@ -35,13 +36,11 @@
         If that interests you in any way, let me know:
     </p>
 
-    <div style="display: grid; grid-template-columns: auto auto auto;">
         <div>
             <h4>Contact Info</h4>
-            <ul>
-                <li>Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
-                <li>Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
-            </ul>
+                Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
+            <br>
+                Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
         </div>
         <div>
             <h4>Projects of Note</h4>
@@ -63,7 +62,6 @@
                 </li>
             </ul>
         </div>
-    </div>
 </div>
 
 <script>
