--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <body>
 
 <div style="text-align: center; text-justify: newspaper">
@@ -36,32 +36,36 @@
         If that interests you in any way, let me know:
     </p>
 
-        <div>
-            <h4>Contact Info</h4>
-                Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
-            <br>
-                Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
-        </div>
-        <div>
-            <h4>Projects of Note</h4>
-            <ul>
-                <li>
-                    An end to end Machine learning pipeline for segmentation and OCR
-                    meters (<a href="https://www.service-link.ca/">ServiceLink</a>)
-                </li>
-                <li>A Secure Federated Graphql API for accessing and updating medical records (<a
-                        href="https://leftindust.com">leftindust</a>)
-                </li>
-                <li>
-                    An Image Labeling application for Yolo/Vott (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
-                    Project</a>)
-                </li>
-                <li>
-                    An Implementation of Dependant Types in Kotlin (<a href="https://github.com/MarcusDunn/order">Personal
-                    Project</a>)
-                </li>
-            </ul>
-        </div>
+    <div>
+        <h4>Contact Info</h4>
+        Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a>
+        <br>
+        Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a>
+    </div>
+    <div>
+        <h4>Projects of Note</h4>
+        <ul>
+            <li>
+                An end to end Machine learning pipeline for segmentation and OCR
+                meters (<a href="https://www.service-link.ca/">ServiceLink</a>)
+            </li>
+            <li>A Secure Federated Graphql API for accessing and updating medical records (<a
+                    href="https://leftindust.com">leftindust</a>)
+            </li>
+            <li>
+                An Image Labeling application for Yolo/Vott (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
+                Project</a>)
+            </li>
+            <li>
+                An Implementation of Dependant Types in Kotlin (<a href="https://github.com/MarcusDunn/order">Personal
+                Project</a>)
+            </li>
+            <li>
+                A syntax highlighter for arbitrary REPLs (<a href="https://github.com/MarcusDunn/spice">Personal
+                Project</a>)
+            </li>
+        </ul>
+    </div>
 </div>
 
 <script>
