--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     href="https://leftindust.com">leftindust</a>)
             </li>
             <li>
-                An Image Labeling application for Yolo/Vott (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
+                An Image Labeling application for Yolo/Darknet (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
                 Project</a>)
             </li>
             <li>
