--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+    <style>
+        body {
+            font-family: "Roboto Thin", serif;
+        }
+    </style>
+    <title>
+        Marcus Dunn's Web Resume
+    </title>
+</head>
+
 <body>
 
 <div style="text-align: center; text-justify: newspaper">
