--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         body {
-            font-family: "Roboto Thin", serif;
+            font-family: "Roboto", serif;
         }
     </style>
     <title>
