dark mode + style adjustments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
 <head>
     <style>
         body {
-            font-family: "Roboto", serif;
+            font-family: "Roboto", sans-serif;
+            background: #202020;
+        }
+
+        h1, h2, h3, h4, h5, h6, li, p {
+            color: white;
+        }
+
+        a {
+            color: #8ccce1;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: #aff3af;
+            background-color: transparent;
+            text-decoration: none;
         }
     </style>
     <title>
@@ -15,19 +32,20 @@
 <body>
 
 <div style="text-align: center; padding-left: 25%; padding-right: 25%">
-    <h1>Marcus Dunn, </h1>
-    <h2><span id="career_path"></span></h2>
-    <p>
+    <h1>Marcus Dunn</h1>
+    <span id="career_path"></span>
+    <p style="text-align: justify; text-justify: inter-character">
         Hello! I'm Marcus Dunn, currently attending the University of Victoria for Computer Science with an option in
         Theory. My current largest
         project is working at <a
-            href="https://leftindust.com/">leftindust</a> where I've created the <a href="https://github.com/MarcusDunn/leftindust-backend">backend</a> for an Electronic Medical
+            href="https://leftindust.com/">leftindust</a> where I've created the <a
+            href="https://github.com/MarcusDunn/leftindust-backend">backend</a> for an Electronic Medical
         Records System. I have a habit of procrastinating schoolwork by writing code which has lead to <a
             href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a
             href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
         and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language"
                                                                                                        onmouseenter="change_lang()"
-                                                                                                       onmousedown="change_lang()"></span>.
+    >coq, idris, clojure, and zig</span>.
         My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
         solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
         javascript if I'm <i>really</i> forced to).
@@ -45,62 +63,65 @@
         and fast enough so users can't tell if something is straining
         <br>
         <br>
-        If that interests you in any way, let me know:
+        If that interests you, let me know:
     </p>
 
 
-        <h4>Contact Info</h4>
-        Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a>
-        <br>
-        Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a>
-        <h4>Projects of Note</h4>
-        <ul>
-            <li>
-                An end to end Machine learning pipeline for segmentation and OCR (<a href="https://www.service-link.ca/">ServiceLink</a>)
-            </li>
-            <li>A Secure Federated Graphql API for accessing and updating medical records (<a
-                    href="https://leftindust.com">leftindust</a>)
-            </li>
-            <li>
-                An Image Labeling application for Yolo/Darknet (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
-                Project</a>)
-            </li>
-            <li>
-                An Implementation of Dependant Types in Kotlin (<a href="https://github.com/MarcusDunn/order">Personal
-                Project</a>)
-            </li>
-            <li>
-                A syntax highlighter for arbitrary REPLs (<a href="https://github.com/MarcusDunn/spice">Personal
-                Project</a>) <b>WIP</b>
-            </li>
-        </ul>
+    <h4>Contact Info</h4>
+
+    <ul>
+        <li>Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
+        <li>Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
+    </ul>
+
+
+    <h4>Projects of Note</h4>
+    <ul>
+        <li>
+            An end to end Machine learning pipeline for segmentation and OCR (<a href="https://www.service-link.ca/">ServiceLink</a>)
+        </li>
+        <li>A Secure Federated Graphql API for accessing and updating medical records (<a
+                href="https://leftindust.com">leftindust</a>)
+        </li>
+        <li>
+            An Image Labeling application for Yolo/Darknet (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
+            Project</a>)
+        </li>
+        <li>
+            An Implementation of Dependant Types in Kotlin (<a href="https://github.com/MarcusDunn/order">Personal
+            Project</a>)
+        </li>
+        <li>
+            A syntax highlighter for arbitrary REPLs (<a href="https://github.com/MarcusDunn/spice">Personal
+            Project</a>) <span style="font-weight: lighter">WIP</span>
+        </li>
+    </ul>
 </div>
 
 <script>
     let career_paths = [
-        "lost university student",
-        "horrible speller",
-        "hacker",
-        "coder",
-        "software engineer",
-        "developer",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: normal'>Lost University Student</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: normal' >Horrible Speller</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Linux User</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Hacker</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Coder</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software Engineer</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software Developer</h2>",
     ]
-    let career_paths_current_index = 0
-    let career_handler = () => {
+    let career_handler = (career_paths_current_index) => {
         let career_path_dom_element = document.getElementById("career_path");
-        career_path_dom_element.innerText = career_paths[career_paths_current_index]
-        career_paths_current_index++;
-        if (career_paths_current_index !== career_paths.length) {
-            setTimeout(career_handler, career_paths_current_index * 200)
+        career_path_dom_element.innerHTML = career_paths[career_paths_current_index]
+        let new_career_paths_current_index = career_paths_current_index + 1;
+        if (new_career_paths_current_index !== career_paths.length) {
+            setTimeout(() => career_handler(new_career_paths_current_index), new_career_paths_current_index * 200 + 100)
         }
     };
-    setTimeout(() => career_handler(), 100)
+    career_handler(0)
 
 
     let languages = [
         "coq",
         "idris",
-        "haskell",
         "clojure",
         "zig"
     ]
