small touch and thanks

--- a/index.html
+++ b/index.html
@@ -96,17 +96,18 @@
             Project</a>) <span style="font-weight: lighter">WIP</span>
         </li>
     </ul>
+    <h4 id="type_me"></h4>
 </div>
 
 <script>
     let career_paths = [
-        "<h2 style='font-family: monospace; height: 30px; font-weight: normal'>Lost University Student</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: normal' >Horrible Speller</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Linux User</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: normal'>Lost_University_Student</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: normal' >Horrible_Speller</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Linux_User</h2>",
         "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Hacker</h2>",
         "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Coder</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software Engineer</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software Developer</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software_Engineer</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software_Developer</h2>",
     ]
     let career_handler = (career_paths_current_index) => {
         let career_path_dom_element = document.getElementById("career_path");
@@ -125,6 +126,19 @@
         "clojure",
         "zig"
     ]
+
+    let type_out = (string, time, el) => {
+        let time_per_char = time / string.length
+        let char = string[0];
+        let rest = string.slice(1);
+        el.innerText += char;
+        el.style.whiteSpace = "break-spaces"
+        if (rest.length !== 0) {
+            setTimeout(() => type_out(rest, time - (time_per_char), el), ((0.5 + Math.random()) * time_per_char))
+        }
+    }
+
+    setTimeout(() => type_out("thanks for having a look!", 1500, document.getElementById("type_me")), 40_000)
 
     let change_lang = () => {
         let lang_dom_element = document.getElementById("language");
