inter-char to inter word justification

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div style="text-align: center; padding-left: 25%; padding-right: 25%">
     <h1>Marcus Dunn</h1>
     <span id="career_path"></span>
-    <p style="text-align: justify; text-justify: inter-character">
+    <p style="text-align: justify; text-justify: inter-word">
         Hello! I'm Marcus Dunn, currently attending the University of Victoria for Computer Science with an option in
         Theory. My current largest
         project is working at <a
