removed underscores from careers

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
 <script>
     let career_paths = [
-        "<h2 style='font-family: monospace; height: 30px; font-weight: normal'>Lost_University_Student</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: normal' >Horrible_Speller</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Linux_User</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: normal'>Lost University Student</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: normal' >Horrible Speller</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Linux User</h2>",
         "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Hacker</h2>",
         "<h2 style='font-family: monospace; height: 30px; font-weight: bold'>Coder</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software_Engineer</h2>",
-        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software_Developer</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software Engineer</h2>",
+        "<h2 style='font-family: monospace; height: 30px; font-weight: bolder'>Software Developer</h2>",
     ]
     let career_handler = (career_paths_current_index) => {
         let career_path_dom_element = document.getElementById("career_path");
