--- a/index.html
+++ b/index.html
@@ -52,18 +52,11 @@
     </p>
 
     <p>
-        I pride myself code that is (in order):
-        <br>
-        readable to someone familiar with the language and problem domain
-        <br>
-        sufficiently statically typed to enforce invariants,
-        <br>
-        well tested enough to avoid breakage,
-        <br>
-        and fast enough so users can't tell if something is straining
-        <br>
-        <br>
+        I pride myself code that is readable, modular, typed, tested, and fast
+    </p>
+    <p>
         If that interests you, let me know:
+
     </p>
 
 
