removed bullet points

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
             color: white;
         }
 
+        h1, h2, h3, h4, h5, h6 {
+            margin-top: 20px;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
         a {
             color: #8ccce1;
             background-color: transparent;
@@ -44,15 +52,14 @@
             href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a
             href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
         and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language"
-                                                                                                       onmouseenter="change_lang()"
-    >coq, idris, clojure, and zig</span>.
+                                                                                                       onmouseenter="change_lang()">coq, idris, clojure, and zig</span>.
         My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
         solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
         javascript if I'm <i>really</i> forced to).
     </p>
 
     <p>
-        I pride myself code that is readable, modular, typed, tested, and fast
+        I pride myself on writing code that is readable, modular, typed, tested, and fast
     </p>
     <p>
         If that interests you, let me know:
@@ -60,15 +67,14 @@
     </p>
 
 
-    <h4>Contact Info</h4>
+    <h2>Contact Info</h2>
 
     <ul>
         <li>Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
         <li>Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
     </ul>
 
-
-    <h4>Projects of Note</h4>
+    <h2>Projects of Note</h2>
     <ul>
         <li>
             An end to end Machine learning pipeline for segmentation and OCR (<a href="https://www.service-link.ca/">ServiceLink</a>)
