added discord link

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <ul>
         <li>Email: <a href="mailto:marcus.s.dunn@gmail.com">marcus.s.dunn@gmail.com</a></li>
         <li>Github: <a href="https://github.com/MarcusDunn">MarcusDunn</a></li>
+        <li>Discord: marcus#0744</li>
     </ul>
 
     <h2>Projects of Note</h2>
@@ -136,7 +137,7 @@
         }
     }
 
-    setTimeout(() => type_out("thanks for having a look!", 1500, document.getElementById("type_me")), 40_000)
+    setTimeout(() => type_out("thanks for having a look!", 2500, document.getElementById("type_me")), 40_000)
 
     let change_lang = () => {
         let lang_dom_element = document.getElementById("language");
