--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </p>
 
     <p>
-        I pride myself on writing code that is readable, modular, typed, tested, and fast
+        I pride myself on writing code that is readable, modular, typed, tested, and fast.
     </p>
     <p>
         If that interests you, let me know:
