--- a/index.html
+++ b/index.html
@@ -42,28 +42,32 @@
 <div style="text-align: center; padding-left: 25%; padding-right: 25%">
     <h1>Marcus Dunn</h1>
     <span id="career_path"></span>
-    <p style="text-align: justify; text-justify: inter-word">
+    <p>
         Hello! I'm Marcus Dunn, currently attending the University of Victoria for Computer Science with an option in
         Theory. My current largest
         project is working at <a
             href="https://leftindust.com/">leftindust</a> where I've created the <a
             href="https://github.com/MarcusDunn/leftindust-backend">backend</a> for an Electronic Medical
-        Records System. I have a habit of procrastinating schoolwork by writing code which has lead to <a
+        Records System.
+    </p>
+    <p>
+        I have a habit of procrastinating schoolwork by writing code which has lead to <a
             href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a
             href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
-        and a mild proficiency in a bunch of increasingly <i>less useful</i> languages including <span id="language"
-                                                                                                       onmouseenter="change_lang()">coq, idris, clojure, and zig</span>.
+        and a mild proficiency in Haskell and a bunch of increasingly <i>less useful</i> languages including <span
+            id="language"
+            onmouseenter="change_lang()">coq, idris, clojure, and zig</span>.
+    </p>
+    <p>
         My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
         solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
         javascript if I'm <i>really</i> forced to).
     </p>
-
     <p>
-        I pride myself on writing code that is readable, modular, typed, tested, and fast.
+        I am looking for opportunities that will let me expand my skill set in new directions over the summer,
     </p>
     <p>
         If that interests you, let me know:
-
     </p>
 
 
@@ -92,8 +96,11 @@
             Project</a>)
         </li>
         <li>
+            Mapping around the UVic Campus (<a href="https://github.com/Vikelabs/maps">VikeLabs</a>)
+        </li>
+        <li>
             A syntax highlighter for arbitrary REPLs (<a href="https://github.com/MarcusDunn/spice">Personal
-            Project</a>) <span style="font-weight: lighter">WIP</span>
+            Project</a>) <span style="font-weight: lighter">on hold</span>
         </li>
     </ul>
     <h4 id="type_me"></h4>
