--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <span id="career_path"></span>
     <p>
         Hello! I'm Marcus Dunn, currently attending the University of Victoria for Computer Science with an option in
-        Theory. My current largest
-        project is working at <a
+        Theory. My current largest project is working at <a
             href="https://leftindust.com/">leftindust</a> where I've created the <a
             href="https://github.com/MarcusDunn/leftindust-backend">backend</a> for an Electronic Medical
         Records System.
@@ -56,7 +55,7 @@
             href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
         and a mild proficiency in Haskell and a bunch of increasingly <i>less useful</i> languages including <span
             id="language"
-            onmouseenter="change_lang()">coq, idris, clojure, and zig</span>.
+            onmouseenter="change_lang()">coq, idris, and clojure</span>.
     </p>
     <p>
         My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
@@ -99,6 +98,9 @@
             Mapping around the UVic Campus (<a href="https://github.com/Vikelabs/maps">VikeLabs</a>)
         </li>
         <li>
+            A carpooling webapp (<a href="https://github.com/CobeyH/SENG-480A">School Project</a>)
+        </li>
+        <li>
             A syntax highlighter for arbitrary REPLs (<a href="https://github.com/MarcusDunn/spice">Personal
             Project</a>) <span style="font-weight: lighter">on hold</span>
         </li>
@@ -110,6 +112,9 @@
         </li>
         <li>
             Added servers support for contracts in htt4k (<a href="https://github.com/http4k/http4k/pull/674">Pull Request</a>)
+        </li>
+        <l1>
+            Support for easy complex number creation in multik (<a href="https://github.com/Kotlin/multik/pull/67#event-5909879484">Pull Request</a>)
         </li>
     </ul>
     <h4 id="type_me"></h4>
@@ -138,8 +143,7 @@
     let languages = [
         "coq",
         "idris",
-        "clojure",
-        "zig"
+        "clojure"
     ]
 
     let type_out = (string, time, el) => {
