--- a/index.html
+++ b/index.html
@@ -43,30 +43,16 @@
     <h1>Marcus Dunn</h1>
     <span id="career_path"></span>
     <p>
-        Hello! I'm Marcus Dunn, currently attending the University of Victoria for Computer Science with an option in
-        Theory. My current largest project is working at <a
-            href="https://leftindust.com/">leftindust</a> where I've created the <a
-            href="https://github.com/MarcusDunn/leftindust-backend">backend</a> for an Electronic Medical
-        Records System.
+        Hello! I'm Marcus Dunn, currently attending the University of Victoria for Computer Science. My current largest project is working at <a href="https://leftindust.com/">leftindust</a> where I've created the <a href="https://github.com/MarcusDunn/leftindust-backend">backend</a> for an Electronic Medical Records System.
     </p>
     <p>
-        I have a habit of procrastinating schoolwork by writing code which has lead to <a
-            href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a
-            href="https://github.com/MarcusDunn/yolo_mark_rs">app</a>
-        and a mild proficiency in Haskell and a bunch of increasingly <i>less useful</i> languages including <span
-            id="language"
-            onmouseenter="change_lang()">coq, idris, and clojure</span>.
+        I have a habit of procrastinating schoolwork by writing code which has lead to <a href="https://marcusdunn.github.io">this</a>, a <i>useful</i> <a href="https://github.com/MarcusDunn/yolo_mark_rs">app</a> and a mild proficiency in Haskell and a bunch of increasingly <i>less useful</i> languages including <span id="language" onmouseenter="change_lang()">coq, idris, and clojure</span>.
     </p>
     <p>
-        My poison of choice at the moment however is Rust, Kotlin or Python depending on the problem I am trying to
-        solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and
-        javascript if I'm <i>really</i> forced to).
+        My poison of choice at the moment however is Rust, Java/Kotlin or Python depending on the problem I am trying to solve. I'll also produce pretty reasonable typescript in your framework of choice if I'm forced to (and javascript if I'm <i>really</i> forced to).
     </p>
     <p>
-        I am looking for opportunities that will let me expand my skill set in new directions over the summer,
-    </p>
-    <p>
-        If that interests you, let me know:
+        I'm currently working at <a href="https://www.service-link.ca/">servicelink</a> creating and using tools for AI development.
     </p>
 
 
@@ -83,16 +69,13 @@
         <li>
             An end to end Machine learning pipeline for segmentation and OCR (<a href="https://www.service-link.ca/">ServiceLink</a>)
         </li>
-        <li>A Secure Federated Graphql API for accessing and updating medical records (<a
-                href="https://leftindust.com">leftindust</a>)
+        <li>A Secure Federated Graphql API for accessing and updating medical records (<a href="https://leftindust.com">leftindust</a>)
         </li>
         <li>
-            An Image Labeling application for Yolo/Darknet (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal
-            Project</a>)
+            An Image Labeling application for Yolo/Darknet (<a href="https://github.com/MarcusDunn/yolo_mark_rs">Personal Project</a>)
         </li>
         <li>
-            An Implementation of Dependant Types in Kotlin (<a href="https://github.com/MarcusDunn/order">Personal
-            Project</a>)
+            An Implementation of Dependant Types in Kotlin (<a href="https://github.com/MarcusDunn/order">Personal Project</a>)
         </li>
         <li>
             Mapping around the UVic Campus (<a href="https://github.com/Vikelabs/maps">VikeLabs</a>)
@@ -101,8 +84,7 @@
             A carpooling webapp (<a href="https://github.com/CobeyH/SENG-480A">School Project</a>)
         </li>
         <li>
-            A syntax highlighter for arbitrary REPLs (<a href="https://github.com/MarcusDunn/spice">Personal
-            Project</a>) <span style="font-weight: lighter">on hold</span>
+            A syntax highlighter for arbitrary REPLs (<a href="https://github.com/MarcusDunn/spice">PersonalProject</a>) <span style="font-weight: lighter">on hold :(</span>
         </li>
     </ul>
     <h2>Open Source Contributions</h2>
