--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 <body>
 
 <div style="text-align: center;
- padding-right: 10%;
- padding-left: 10%;
- @media (max-width: 800px) {
+ @media all and not (max-width: 800px) {
+    padding-right: 10%;
+    padding-left: 10%;
+ }
+ @media all and (max-width: 800px) {
     padding-right: 25%;
     padding-left: 25%
 };">
